--- a/webgl/index.html
+++ b/webgl/index.html
@@ -201,7 +201,7 @@ group.parent // scene</code></pre>
       <p><img src="images/unit-circle-trig.png" alt=""></p>
       <div class="slide temp abs-bc">
 <pre><code>mesh.position.x = Math.cos( time );
-mesh.position.y = Math.sin( time );</code></pre></div>      
+mesh.position.y = Math.sin( time );</code></pre></div>
     </section>
 
     <section class="slide instant">
@@ -367,6 +367,11 @@ var texture = loader.load("color-map.jpg");</code></pre></div>
       <h2 style="position: relative;">Three Point Lighting</h2>
       <div class="temp abs-bc bc-text outline">Key, Fill, Rim</div>
       <div class="slide temp abs-bc bc-text outline">Key, Fill, Rim</div>
+    </section>
+
+    <section class="slide">
+      <h2 style="position: relative;">Three Point Lighting</h2>
+      <p><img src="images/key-fill-rim.jpg"></p>
     </section>
 
     <section class="slide">
