--- a/webgl/index.html
+++ b/webgl/index.html
@@ -7,8 +7,8 @@
 
   <title>Intro to WebGL with Three.js</title>
 
-  <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" type="text/css">
-  <link href="http://fonts.googleapis.com/css?family=Source+Code+Pro:400,700" rel="stylesheet" type="text/css">
+  <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" type="text/css">
+  <link href="//fonts.googleapis.com/css?family=Source+Code+Pro:400,700" rel="stylesheet" type="text/css">
 
   <!-- Required stylesheet -->
   <link rel="stylesheet" href="../deck.js/core/deck.core.css">
@@ -413,6 +413,7 @@ loader.load("teapot.js", function( geometry, materials ) {
       <!-- http://threejs.org/examples/webgl_interactive_cubes -->
       <!-- http://soledadpenades.com/articles/three-js-tutorials/object-picking/ -->
       <iframe src="//threejs.org/examples/webgl_interactive_cubes" frameborder="0"></iframe>
+      <iframe src="https://www.google.com/search?q=%http://threejs.org/examples/webgl_interactive_cubes&btnI=Im+Feeling+Lucky" frameborder="0"></iframe>
     </section>
 
     <section class="slide instant">
