--- a/webgl/index.html
+++ b/webgl/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=1280, user-scalable=no">
-
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>Intro to WebGL with Three.js</title>
 
   <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" type="text/css">
@@ -30,21 +30,6 @@
 
   <!-- Required Modernizr file -->
   <script src="../deck.js/modernizr.custom.js"></script>
-
-  <!-- Google Analytics -->
-  <script>
-  if (document.location.hostname != 'localhost') {
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-34432087-1', 'auto');
-    ga('send', 'pageview');
-  }
-  </script>
-  <!-- End Google Analytics -->
-
 </head>
 <body class="language-javascript">
   <div class="deck-container">
