--- a/webgl/index.html
+++ b/webgl/index.html
@@ -59,7 +59,7 @@
     </section>
 
     <section class="slide">
-      <iframe src="http://threejs.org/examples/webgl_points_random" frameborder="0"></iframe>
+      <iframe src="iframes/webgl_points_random.html" frameborder="0"></iframe>
     </section>
 
     <section class="slide">
