--- a/webgl/index.html
+++ b/webgl/index.html
@@ -397,7 +397,7 @@ loader.load("teapot.js", function( geometry, materials ) {
       <!-- http://stemkoski.github.io/Three.js/Mouse-Over.html -->
       <!-- http://threejs.org/examples/webgl_interactive_cubes -->
       <!-- http://soledadpenades.com/articles/three-js-tutorials/object-picking/ -->
-      <iframe src="http://threejs.org/examples/webgl_interactive_cubes" frameborder="0"></iframe>
+      <iframe src="iframes/webgl_interactive_cubes.html" frameborder="0"></iframe>
     </section>
 
     <section class="slide instant">
