--- a/webgl/index.html
+++ b/webgl/index.html
@@ -70,8 +70,10 @@
     </section>
 
     <section class="slide">
-      <!-- <img class="spotlight" src="images/threejs.png" alt=""> -->
-      <iframe src="http://threejs.org" frameborder="0"></iframe>
+      <img class="spotlight" src="images/threejs.png" alt="">
+      <p class="slide">
+          <a href="http://threejs.org" target="_blank">http://threejs.org</a>
+      </p>
     </section>
 
     <section class="slide">
