--- a/webgl/index.html
+++ b/webgl/index.html
@@ -70,7 +70,7 @@
     </section>
 
     <section class="slide">
-      <img class="spotlight" src="images/threejs.png" alt="">
+      <a href="http://threejs.org"><img class="spotlight" src="images/threejs.png" alt=""></a>
     </section>
 
     <section class="slide">
