--- a/messenger.html
+++ b/messenger.html
@@ -11,7 +11,7 @@
         <p>Testing Messenger Customer Chat Plugin</p>
         <div class="fb-customerchat"
             page_id="841950049311995"
-            ref="customer_chat"
+            ref="source=website&country=fr&locale=en_US"
             minimized="false">
         </div>
         <script>
